<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_baseline_calendar_today"
            android:title="@string/menu_calender" />
        <item
            android:id="@+id/nav_lockout"
            android:icon="@drawable/ic_baseline_access_time_filled_"
            android:title="@string/menu_lockout" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_baseline_school"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_scheduler"
            android:icon="@drawable/ic_baseline_format_list_bulleted"
            android:title="@string/menu_scheduler" />
        <item
            android:id="@+id/nav_lunch"
            android:icon="@drawable/ic_baseline_restaurant_menu"
            android:title="@string/menu_lunch" />
        <item
            android:id="@+id/nav_schoolmap"
            android:icon="@drawable/ic_baseline_map"
            android:title="@string/menu_schoolmap"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings"
            android:title="@string/menu_settings" />

    </group>
</menu>